# prompting_around

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  revision.py  sample.env  upgrade.py
alembic/versions/: 0b0149b72926_add_created_at_column_to_all_tables.py  1acd09bf3033_adding_columns_for_interactions_to_.py  a0fbce51b969_first_set_of_tables.py
src/db/: database.py  models.py
src/promptingaround/: app.py  ollama_local.py
src/samples/: langchain_ollama.py  langchain_openai.py
src/ui/: ui.py
tests/: test_app.py
tests/integration/: test_database.py  test_ollama_local.py
